<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".MainActivity">

    <com.google.android.material.tabs.TabLayout
        android:id="@+id/tabmain"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:tabMode="fixed"
        app:tabGravity="fill"
        android:background="@color/colorPrimary"
        app:tabTextColor="#FFFFFF">

        <com.google.android.material.tabs.TabItem
            android:id="@+id/food"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/foods" />

        <com.google.android.material.tabs.TabItem
            android:id="@+id/drink"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/beverages" />

        <com.google.android.material.tabs.TabItem
            android:id="@+id/dessert"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/desserts" />

        <com.google.android.material.tabs.TabItem
            android:id="@+id/tambah"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/pesan" />

    </com.google.android.material.tabs.TabLayout>

    <androidx.viewpager.widget.ViewPager
        android:id="@+id/viewpager"
        android:layout_width="match_parent"
        android:layout_height="match_parent">

    </androidx.viewpager.widget.ViewPager>

</LinearLayout>