<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="350dp"
    android:layout_height="wrap_content"
    android:layout_gravity="center">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="70dp"
        android:background="#F4A261"
        android:gravity="center_horizontal"
        android:orientation="vertical">

        <TextView
            android:id="@+id/dialog_name"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/menu_name"
            android:textColor="#10213D"
            android:textSize="20sp"
            android:layout_marginTop="100dp"/>

        <TextView
            android:id="@+id/dialog_price"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/menu_price"
            android:textColor="#ffff"
            android:textSize="12sp"
            android:layout_marginTop="2dp"/>

        <TextView
            android:id="@+id/dialog_desc"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/menu_descript"
            android:textColor="#10213D"
            android:textSize="15sp"
            android:layout_marginTop="5dp"
            android:layout_marginBottom="20dp"
            android:layout_marginRight="10dp"
            android:layout_marginLeft="10dp"
            android:textAlignment="center"/>



    </LinearLayout>

    <ImageView
        android:id="@+id/dialog_image"
        android:layout_width="200dp"
        android:layout_height="200dp"
        android:layout_alignParentTop="true"
        android:layout_centerInParent="true"
        android:padding="10dp"
        android:src="@drawable/ayam_goreng" />

</RelativeLayout>